--- a/i18n/en.json
+++ b/i18n/en.json
@@ -13,14 +13,54 @@
 	"logentry-gloopcontrol-notif": "$1 sent a notification with header \"$4\" and content \"$5\" ($6)",
 	"gloopcontrol-config-intro": "This page outputs a serialized JSON list of global variables on this wiki that begin with <code>$wg</code> or <code>$wmg</code>. Some sensitive configuration variables are hidden from this list.",
 	"gloopcontrol-user-type": "Type",
-	"gloopcontrol-user-username": "User",
 	"gloopcontrol-user-id": "ID",
 	"gloopcontrol-user-email": "Email address",
 	"gloopcontrol-tasks-reassign-target": "Username to re-assign edits to",
 	"gloopcontrol-user-not-found": "'''$1''' was not found in the database.",
 	"gloopcontrol-user-multiple-email": "There are multiple users with the email address '''$1''':",
+	"gloopcontrol-textformat-space": "&#32;",
+	"gloopcontrol-linkbar-main": "Main",
+	"gloopcontrol-linkbar-getuserinfo": "Get user info",
+	"gloopcontrol-linkbar-notifications": "Notifications",
+	"gloopcontrol-linkbar-runtask": "Run task",
+	"gloopcontrol-linkbar-config": "Config",
+	"gloopcontrol-info": "Wiki information",
+	"gloopcontrol-info-server": "Server:",
+	"gloopcontrol-info-database": "Database:",
+	"gloopcontrol-info-database-shared": "Shared database:",
+	"gloopcontrol-info-wiki": "Wiki:",
+	"gloopcontrol-info-host": "Host:",
+	"gloopcontrol-info-php": "PHP version:",
+	"gloopcontrol-user": "Get user information",
+	"gloopcontrol-user-desc": "Use this tool to learn more about a particular user, such as their email address.",
+	"gloopcontrol-user-username": "Username",
+	"gloopcontrol-user-unknown": "Unknown",
+	"gloopcontrol-user-none": "None",
+	"gloopcontrol-user-email-confirmed": "confirmed at",
+	"gloopcontrol-user-email-unconfirmed": "unconfirmed",
+	"gloopcontrol-user-blocked": "Is blocked here:",
+	"gloopcontrol-user-blockinfo": "<!-- Yes -->, since $1. Block added by $2. Expires at $3.",
+	"gloopcontrol-user-groups": "Groups:",
+	"gloopcontrol-user-touched": "Last touched:",
+	"gloopcontrol-user-lastedit": "Last edit:",
+	"gloopcontrol-user-ipaddress": "IP address:",
+	"gloopcontrol-user-unavailable": "Unavailable",
+	"gloopcontrol-user-migrated-no": "Needs external wiki migration",
+	"gloopcontrol-user-migrated-yes": "No external migration needed",
+	"gloopcontrol-user-2fa": "2FA enabled:",
+	"gloopcontrol-user-button-rename": "Rename",
+	"gloopcontrol-user-button-email": "Change email",
+	"gloopcontrol-user-button-reassign": "Reassign edits",
+	"gloopcontrol-user-button-password": "Reset password",
+	"gloopcontrol-tasks": "Run task",
+	"gloopcontrol-tasks-desc": "Emulates running various maintenance scripts for a wiki without requiring direct server or database access.",
 	"gloopcontrol-tasks-intro": "This page allows you to emulate running specific maintenance scripts without having direct server access by re-implementing their logic. Actions taken on this page [[Special:Log/gloopcontrol|are logged]]. If you require something that is not listed here, please contact a sysadmin.",
 	"gloopcontrol-tasks-task": "Task to run",
+	"gloopcontrol-tasks-task-emailaddress": "Change user email address",
+	"gloopcontrol-tasks-task-password": "Change user password",
+	"gloopcontrol-tasks-task-reassign": "Re-assign edits",
+	"gloopcontrol-tasks-task-anonymize": "Anonymize data",
+	"gloopcontrol-tasks-task-purge": "Purge CDN cache",
 	"gloopcontrol-tasks-username": "Username",
 	"gloopcontrol-tasks-email": "New email address",
 	"gloopcontrol-tasks-password": "New password",
@@ -28,20 +68,22 @@
 	"gloopcontrol-tasks-purge-cache": "Exact URL to purge",
 	"gloopcontrol-tasks-comment": "Comment",
 	"gloopcontrol-tasks-confirm": "Tick to confirm that you intend to perform this action. Please double-check your inputs!",
+	"gloopcontrol-tasks-error-user-self": "You cannot perform an action on yourself using this form. Please contact a sysadmin.",
 	"gloopcontrol-tasks-error-user-not-found": "'''$1''' was not found in the database.",
 	"gloopcontrol-tasks-error-password-invalid": "The password you entered is not a valid password on this wiki.",
 	"gloopcontrol-tasks-error-user-anonymize-failed": "Could not anonymize '''$1'''. An error occurred.",
-	"gloopcontrol-tasks-error-user-self": "You cannot perform an action on yourself using this form. Please contact a sysadmin.",
-	"gloopcontrol-tasks-success-email": "Changed email for '''$1''' to '''$2'''",
-	"gloopcontrol-tasks-success-password": "Changed password for '''$1'''",
-	"gloopcontrol-tasks-success-reassign": "Re-assigned edits from '''$1''' to '''$2''' on this wiki",
-	"gloopcontrol-tasks-success-anonymize": "Anonymized user '''$1'''",
 	"gloopcontrol-tasks-warning-email-already-set": "'''$1''' already has that email address.",
-	"gloopcontrol-tasks-success-purge": "Sent purge request",
+	"gloopcontrol-tasks-success-purge": "Sent purge request.",
 	"gloopcontrol-error-2fa": "You must [[Special:Manage_Two-factor_authentication|enable two-factor authentication]] to use this page.",
-	"gloopcontrol-notifications-intro": "This page allows you to manage notifications that can be sent to users using [https://www.mediawiki.org/wiki/Extension:Echo Echo]. This can be used for sending information about upcoming maintenance, or for legal reasons.",
+	"gloopcontrol-notifications": "Notifications",
+	"gloopcontrol-notifications-desc": "Send an Echo notification to user(s).",
+	"gloopcontrol-notifications-title": "Manage notifications",
+	"gloopcontrol-notifications-intro": "This page allows you to manage notifications that can be sent to users using [https://www.mediawiki.org/wiki/Special:MyLanguage/Extension:Echo Echo]. This can be used for sending information about upcoming maintenance, or for legal reasons.",
 	"gloopcontrol-notifications-send-type": "Type of notification to send",
 	"gloopcontrol-notifications-send-target-type": "Target type",
+	"gloopcontrol-notifications-send-target-type-users": "Send to specific user(s)",
+	"gloopcontrol-notifications-send-target-type-all-users": "Send to all users on this wiki",
+	"gloopcontrol-notifications-send-target-type-all-network": "Send to all users on entire network (all wikis)",
 	"gloopcontrol-notifications-send-users": "User(s)",
 	"gloopcontrol-notifications-send-all-users": "Test",
 	"gloopcontrol-notifications-send-header": "Notification header",
@@ -53,5 +95,11 @@
 	"echo-category-title-gloop-message": "System messages from Weird Gloop",
 	"echo-pref-tooltip-gloop-message": "Notify me when there is a system message sent by Weird Gloop.",
 	"notification-header-gloop-message": "$1",
-	"notification-body-gloop-message": "$1"
+	"notification-body-gloop-message": "$1",
+	"gloopcontrol-tasks-success-email": "Changed email for '''$1''' to '''$2'''.",
+	"gloopcontrol-tasks-success-password": "Changed password for '''$1'''.",
+	"gloopcontrol-tasks-success-reassign": "Re-assigned edits from '''$1''' to '''$2''' on this wiki.",
+	"gloopcontrol-tasks-success-anonymize": "Anonymized user '''$1'''.",
+	"gloopcontrol-config": "Site config",
+	"gloopcontrol-config-desc": "View all defined configuration variables for this wiki."
 }
