Allow looking up user by email or ID

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -11,9 +11,13 @@
 	"gloopcontrol-log-header": "This is a log of actions taken by Weird Gloop staff members using [[Special:GloopControl]] on this wiki.",
 	"logentry-gloopcontrol-task": "$1 ran task \"$4\" on target $3",
 	"gloopcontrol-config-intro": "This page outputs a serialized JSON list of global variables on this wiki that begin with <code>$wg</code> or <code>$wmg</code>. Some sensitive configuration variables are hidden from this list.",
-	"gloopcontrol-user-username": "Username",
+	"gloopcontrol-user-type": "Type",
+	"gloopcontrol-user-username": "User",
+	"gloopcontrol-user-id": "ID",
+	"gloopcontrol-user-email": "Email address",
 	"gloopcontrol-tasks-reassign-target": "Username to re-assign edits to",
 	"gloopcontrol-user-not-found": "'''$1''' was not found in the database.",
+	"gloopcontrol-user-multiple-email": "There are multiple users with the email address '''$1''':",
 	"gloopcontrol-tasks-intro": "This page allows you to emulate running specific maintenance scripts without having direct server access by re-implementing their logic. Actions taken on this page [[Special:Log/gloopcontrol|are logged]]. If you require something that is not listed here, please contact a sysadmin.",
 	"gloopcontrol-tasks-task": "Task to run",
 	"gloopcontrol-tasks-username": "Username",
