--- a/i18n/en.json
+++ b/i18n/en.json
@@ -24,6 +24,7 @@
 	"gloopcontrol-tasks-email": "New email address",
 	"gloopcontrol-tasks-password": "New password",
 	"gloopcontrol-tasks-invalidate": "Also invalidate user's sessions (will log them out)",
+	"gloopcontrol-tasks-purge-cache": "Exact URL to purge",
 	"gloopcontrol-tasks-comment": "Comment",
 	"gloopcontrol-tasks-confirm": "Tick to confirm that you intend to perform this action. Please double-check your inputs!",
 	"gloopcontrol-tasks-error-user-not-found": "'''$1''' was not found in the database.",
@@ -35,5 +36,6 @@
 	"gloopcontrol-tasks-success-reassign": "Re-assigned edits from '''$1''' to '''$2''' on this wiki",
 	"gloopcontrol-tasks-success-anonymize": "Anonymized user '''$1'''",
 	"gloopcontrol-tasks-warning-email-already-set": "'''$1''' already has that email address.",
+	"gloopcontrol-tasks-success-purge": "Sent purge request",
 	"gloopcontrol-error-2fa": "You must [[Special:Manage_Two-factor_authentication|enable two-factor authentication]] to use this page."
 }
