Support temporary users

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -31,7 +31,8 @@
 	"gloopcontrol-tasks-error-user-not-found": "'''$1''' was not found in the database.",
 	"gloopcontrol-tasks-error-password-invalid": "The password you entered is not a valid password on this wiki.",
 	"gloopcontrol-tasks-error-user-anonymize-failed": "Could not anonymize '''$1'''. An error occurred.",
-	"gloopcontrol-tasks-error-user-self": "You cannot perform an action on yourself using this form. Please contact a sysadmin.",
+	"gloopcontrol-tasks-error-user-self": "You cannot perform this action on yourself.",
+	"gloopcontrol-tasks-error-user-temp": "You cannot perform this action on a temporary user.",
 	"gloopcontrol-tasks-success-email": "Changed email for '''$1''' to '''$2'''",
 	"gloopcontrol-tasks-success-password": "Changed password for '''$1'''",
 	"gloopcontrol-tasks-success-reassign": "Re-assigned edits from '''$1''' to '''$2''' on this wiki",
